# booking-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py
app/core/: config.py  constants.py  init_db.py  logger.py  security.py
app/crud/: booking.py  room.py  slot.py  user.py
app/models/: __init__.py  booking.py  bookings.py  rooms.py  slots.py  users.py
app/routers/: auth.py  booking.py  deps.py  room.py
app/schemas/: booking.py  room.py  user.py
tests/: conftest.py  test_auth_api.py  test_bookings_api.py  test_crud_booking.py  test_crud_room.py  test_crud_user.py  test_rooms_api.py  test_security.py
