[project]
name = "booking-service"
version = "0.1.0"
description = ""
authors = [
    {name = "rillside",email = "alikoireisn@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "environs (>=15.0.1,<16.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
