[project]
name = "booking-service"
version = "0.1.0"
description = ""
authors = [
    {name = "rillside",email = "alikoireisn@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "environs (>=15.0.1,<16.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)"
]


[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
httpx = ">=0.27.0"
aiosqlite = ">=0.20.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
